initial project version

--- a/translate.css
+++ b/translate.css
@@ -46,3 +46,6 @@
 .enFlag {
 	background: url('http://icons.iconarchive.com/icons/icons-land/vista-flags/16/English-Language-Flag-1-icon.png') no-repeat left center;
 }
+.zhFlag {
+	background: url('http://icons.iconarchive.com/icons/custom-icon-design/all-country-flag/16/China-Flag-icon.png') no-repeat left center;
+}
